k8s/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: mk-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/renanpariiz/projeto-individual-renan-pariz-server:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: mk-game
spec:
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
